# minimacs

./: .gitignore  Makefile  README  config.h.in  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  filefuncs.c  main.c  minimacs.h
